5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4063/executions/1578_1559.log
== TEST (2019-03-18 19:24:29) 
-- CODE:
frase = ".upper(Ada Lovelace foi a primeira programadora da historia)."
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:24:59) 
-- CODE:
frase = ".upper(Ada Lovelace foi a primeira programadora da historia)."
print(frase.Ada Lovelace foi a primeira programadora da historia)
-- ERROR:
File "XXXX", line 2
    print(frase.Ada Lovelace foi a primeira programadora da historia)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:25:16) 
-- CODE:
frase = ".upper(Ada Lovelace foi a primeira programadora da historia)."
print(frase."Ada Lovelace foi a primeira programadora da historia")
-- ERROR:
File "XXXX", line 2
    print(frase."Ada Lovelace foi a primeira programadora da historia")
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:25:42) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase .upper"Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print(frase .upper"Ada Lovelace foi a primeira programadora da historia.")
                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:25:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase".upper Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print(frase".upper Ada Lovelace foi a primeira programadora da historia.")
                                                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:26:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(".upper Ada Lovelace foi a primeira programadora da historia.")
-- OUTPUT:
.upper Ada Lovelace foi a primeira programadora da historia.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:26:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(".upper Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.143173
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
.upper Ada Lovelace foi a primeira programadora da historia.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:26:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print .upper "Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print .upper "Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(.upper "Ada Lovelace foi a primeira programadora da historia."))?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:26:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print .upper "Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.166913
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print .upper "Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:26:41) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print .upper "Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print .upper "Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(.upper "Ada Lovelace foi a primeira programadora da historia."))?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:26:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ".upper Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print ".upper Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(".upper Ada Lovelace foi a primeira programadora da historia."))?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:26:59) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ".upper (Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print ".upper (Ada Lovelace foi a primeira programadora da historia.")
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:27:03) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ".upper Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.176772
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print ".upper Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:27:04) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ".upper Ada Lovelace foi a primeira programadora da historia.")
-- EXECUTION TIME:
0.180657
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print ".upper Ada Lovelace foi a primeira programadora da historia.")
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:27:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(.upper Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print "(.upper Ada Lovelace foi a primeira programadora da historia.")
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:27:46) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ".upper (Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print ".upper (Ada Lovelace foi a primeira programadora da historia.")
                                                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:28:02) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(.upper (Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print "(.upper (Ada Lovelace foi a primeira programadora da historia."))
                                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:29:25) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "Ada Lovelace foi a primeira programadora da historia.upper"
-- ERROR:
File "XXXX", line 2
    print "Ada Lovelace foi a primeira programadora da historia.upper"
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Ada Lovelace foi a primeira programadora da historia.upper")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:29:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "frase.upper"
-- ERROR:
File "XXXX", line 2
    print "frase.upper"
                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("frase.upper")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper")
-- OUTPUT:
frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:30:10) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper")
-- EXECUTION TIME:
0.189385
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper")
-- OUTPUT:
frase.upper
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:21) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:30:22) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- EXECUTION TIME:
0.242231
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:23) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:30:39) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper())
-- EXECUTION TIME:
0.153649
-- ERROR:
  File "/home/codebench/codes/1578/1559/main.py", line 2
    print ("frase.upper())
                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper())
-- ERROR:
File "XXXX", line 2
    print ("frase.upper())
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:30:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- EXECUTION TIME:
0.178653
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:30:59) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print (frase."upper()"
-- ERROR:
File "XXXX", line 2
    print (frase."upper()"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print (frase."upper()")
-- ERROR:
File "XXXX", line 2
    print (frase."upper()")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(frase."upper()")
-- ERROR:
File "XXXX", line 2
    print "(frase."upper()")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:52) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(frase."upper()")
-- ERROR:
File "XXXX", line 2
    print "(frase."upper()")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:55) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(frase."upper())
-- ERROR:
File "XXXX", line 2
    print "(frase."upper())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:31:58) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(frase."upper()
-- ERROR:
File "XXXX", line 2
    print "(frase."upper()
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:32:09) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "(frase.upper()"
-- ERROR:
File "XXXX", line 2
    print "(frase.upper()"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:32:47) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "frase.upper"
-- ERROR:
File "XXXX", line 2
    print "frase.upper"
                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("frase.upper")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:33:01) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "frase.upper()"
-- ERROR:
File "XXXX", line 2
    print "frase.upper()"
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:33:06) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print "frase.upper()")
-- ERROR:
File "XXXX", line 2
    print "frase.upper()")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:33:40) 
-- CODE:
frase = " Ada Lovelace foi a primeira programadora da historia. "
print "frase.upper()")
-- ERROR:
File "XXXX", line 2
    print "frase.upper()")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:34:33) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper())
-- ERROR:
File "XXXX", line 2
    print ("frase.upper())
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:34:51) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:34:53) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- EXECUTION TIME:
0.14998
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:34:54) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ("frase.upper()")
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:35:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ( "frase.upper()" )
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:35:13) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ( "frase.upper()" )
-- EXECUTION TIME:
0.157623
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
frase.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:35:14) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print ( "frase.upper()" )
-- OUTPUT:
frase.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:35:46) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ( "texto.upper()" )
-- OUTPUT:
texto.upper()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:35:48) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ( "texto.upper()" )
-- EXECUTION TIME:
0.141695
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
texto.upper()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:44:45) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print (.upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 2
    print (.upper("Ada Lovelace foi a primeira programadora da historia.")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:44:53) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print (upper("Ada Lovelace foi a primeira programadora da historia.")
-- ERROR:
File "XXXX", line 3
    
                                                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:45:31) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ("Ada Lovelace foi a primeira programadora da historia.".upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f8d14d529f0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:45:33) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ("Ada Lovelace foi a primeira programadora da historia.".upper)
-- EXECUTION TIME:
0.183548
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
<built-in method upper of str object at 0x7f4c676da4a8>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 19:45:38) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:45:40) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.294573
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:57:27) 
-- CODE:
texto = "Ada Lovelace foi a primeira programadora da historia."
print ("Ada Lovelace foi a primeira programadora da historia.".upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
